--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,9 @@
 title: Just the Docs Template
 description: A starter template for a Jeykll site using the Just the Docs theme!
 theme: just-the-docs
+custom_stylesheets:
+  - assets/css/just-the-docs.css
+
 
 url: https://just-the-docs.github.io
 
@@ -8,3 +11,8 @@ aux_links:
   Template Repository: https://github.com/just-the-docs/just-the-docs-template
 
 color_scheme: wider
+
+sass:
+  style: compressed
+  load_paths:
+    - _sass
